<resources>
    <string name="app_name">Tareas</string>
    <string name="etTask">Agregar Tareas / Buscar Tarea </string>
    <string name="btnAdd">Agregar</string>
    <string name="btnBsq">Buscar Tarea</string>
    <string name="btnLmp">Limpiar busqueda</string>



    <string name="etTaskN">Edite su tarea</string>
    <string name="btnUdp">Actualizar</string>
    <string name="btnDlt">Eliminar tarea</string>


</resources>