<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/etTask"
        android:text="" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAdd" />

    <Button
        android:id="@+id/btnBsq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnBsq" />

    <Button
        android:id="@+id/btnLmp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLmp" />




    <ListView
        android:id="@+id/lisTask"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>