<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTaskN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etTaskN"
        android:height="49dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnUdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnUdp" />

    <Button
        android:id="@+id/btnDlt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDlt" />
</LinearLayout>